added create in modal and new tab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["tanstack", "TRPC"],
+  "cSpell.words": ["hookform", "tanstack", "TRPC"],
   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
