--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "export-to-csv": "^1.2.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
