--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "next": "^14.0.4",
+    "next-intl": "^3.7.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
+    "rtl-detect": "^1.1.2",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "uuid": "^9.0.1",
@@ -48,6 +50,7 @@
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/rtl-detect": "^1.0.3",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
