--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "cSpell.words": ["hookform", "jspdf", "tanstack", "TRPC"],
+  "cSpell.words": ["hookform", "jspdf", "Swipeable", "tanstack", "TRPC"],
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "i18n-ally.localesPaths": ["messages"]
+  "i18n-ally.localesPaths": ["messages"],
+  "i18n-ally.keystyle": "nested"
 }
