--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:generate": "prisma generate",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "format": "prettier -w **/*.ts **/*.tsx",
     "lint": "next lint",
     "start": "next start"
   },
@@ -46,6 +47,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
