--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
-  "cSpell.words": ["hookform", "jspdf", "Swipeable", "tanstack", "TRPC"],
+  "cSpell.words": [
+    "autotable",
+    "hookform",
+    "jspdf",
+    "nextjs",
+    "swipeable",
+    "tanstack",
+    "trpc",
+    "ungroup"
+  ],
   "cSpell.ignorePaths": [
     "package-lock.json",
     "node_modules",
