--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@mui/material-nextjs": "^5.15.9",
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/match-sorter-utils": "^8.11.8",
@@ -42,6 +44,8 @@
     "react-hook-form": "^7.50.1",
     "rtl-detect": "^1.1.2",
     "server-only": "^0.0.1",
+    "stylis": "^4.3.1",
+    "stylis-plugin-rtl": "^2.1.1",
     "superjson": "^2.2.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -53,6 +57,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/rtl-detect": "^1.0.3",
+    "@types/stylis": "^4.2.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
