--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
+    "amiri",
     "autotable",
     "hookform",
     "jspdf",
     "nextjs",
+    "roboto",
     "swipeable",
     "tanstack",
     "trpc",
