--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
     "swipeable",
     "tanstack",
     "trpc",
-    "ungroup"
+    "ungroup",
+    "zaman"
   ],
   "cSpell.ignorePaths": [
     "package-lock.json",
