--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylis-plugin-rtl": "^2.1.1",
     "superjson": "^2.2.1",
     "uuid": "^9.0.1",
+    "zaman": "^2.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
